force-app/main/default/objects/Contact/fields/Coding_Round_Comments__c.field-meta.xml
<CustomField>
    <fullName>Coding_Round_Comments__c</fullName>
    <label>Coding Round Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>