force-app/main/default/objects/Contact/fields/Coding_Round_Marks__c.field-meta.xml
<CustomField>
    <fullName>Coding_Round_Marks__c</fullName>
    <label>Coding Round Marks</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>