force-app/main/default/objects/Contact/fields/Coding_Round_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Coding_Round_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coding Round Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>