force-app/main/default/objects/Contact/fields/Coding_Round_Status__c.field-meta.xml
<CustomField>
    <fullName>Coding_Round_Status__c</fullName>
    <label>Coding Round Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Status</valueSetName>
    </valueSet>
</CustomField>