force-app/main/default/objects/Contact/fields/Dob__c.field-meta.xml
<CustomField>
    <fullName>Dob__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>