force-app/main/default/objects/Contact/fields/End_Test_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Test_Time__c</fullName>
    <label>End Test Time</label>
    <type>Time</type>
</CustomField>