force-app/main/default/objects/Contact/fields/Graduation_College_Name__c.field-meta.xml
<CustomField>
    <fullName>Graduation_College_Name__c</fullName>
    <label>Graduation College Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>