force-app/main/default/objects/Contact/fields/HR_Round_Comments__c.field-meta.xml
<CustomField>
    <fullName>HR_Round_Comments__c</fullName>
    <label>HR Round Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>