force-app/main/default/objects/Contact/fields/HR_Round_Rating__c.field-meta.xml
<CustomField>
    <fullName>HR_Round_Rating__c</fullName>
    <formula>(
    CASE(Behavioral_Aspects__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Clarity_of_Thought__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Presentability__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Expression_of_Views__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Communication_Skills_hr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0)
) / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Round Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>