force-app/main/default/objects/Contact/fields/Intermediate_Polytechnic_Branch__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Polytechnic_Branch__c</fullName>
    <label>Intermediate/Polytechnic Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPC</fullName>
            </value>
            <value>
                <fullName>BiPC</fullName>
            </value>
            <value>
                <fullName>MEC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>