force-app/main/default/objects/Contact/fields/Intermediate_Polytechnic_Marks_Grade__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Polytechnic_Marks_Grade__c</fullName>
    <label>Intermediate/Polytechnic Marks/Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>