force-app/main/default/objects/Contact/fields/Manager_Round_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Round_Comments__c</fullName>
    <label>Manager Round Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>