force-app/main/default/objects/Contact/fields/Manager_Round_Status__c.field-meta.xml
<CustomField>
    <fullName>Manager_Round_Status__c</fullName>
    <label>Manager Round Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interview_Status_Picklist</valueSetName>
    </valueSet>
</CustomField>