force-app/main/default/objects/Contact/fields/Other_Inter_Branch__c.field-meta.xml
<CustomField>
    <fullName>Other_Inter_Branch__c</fullName>
    <label>Other Inter Branch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>