force-app/main/default/objects/Contact/fields/Permanent_Location__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Location__c</fullName>
    <label>Permanent Location</label>
    <type>TextArea</type>
</CustomField>