force-app/main/default/objects/Contact/fields/Post_Graduate_Branch__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate_Branch__c</fullName>
    <label>Post Graduate Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M.Sc</fullName>
            </value>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>M.B.A</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>