force-app/main/default/objects/Contact/fields/Post_Graduate_College_Name__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate_College_Name__c</fullName>
    <label>Post Graduate College Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>