force-app/main/default/objects/Contact/fields/Post_Graduate_Hallticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate_Hallticket_Number__c</fullName>
    <label>Post Graduate Hallticket Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>