force-app/main/default/objects/Contact/fields/Post_Graduate_Passing_Year__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate_Passing_Year__c</fullName>
    <label>Post Graduate Passing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>