force-app/main/default/objects/Contact/fields/Post_Graduate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Post_Graduate_Percentage__c</fullName>
    <label>Post Graduate Percentage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>