force-app/main/default/objects/Contact/fields/Problem_Solving_Skills__c.field-meta.xml
<CustomField>
    <fullName>Problem_Solving_Skills__c</fullName>
    <label>Problem-Solving Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>