force-app/main/default/objects/Contact/fields/Programming_Languages_Known__c.field-meta.xml
<CustomField>
    <fullName>Programming_Languages_Known__c</fullName>
    <label>Programming Languages Known</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>