force-app/main/default/objects/Contact/fields/Retake_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Retake_Start_Time__c</fullName>
    <label>Retake Start Time</label>
    <type>Time</type>
</CustomField>