force-app/main/default/objects/Contact/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>school name of the candidate</description>
    <label>School Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>