force-app/main/default/objects/Contact/fields/Sec_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Sec_Consumed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consumed Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>