force-app/main/default/objects/Contact/fields/Selected_Face_To_Face__c.field-meta.xml
<CustomField>
    <fullName>Selected_Face_To_Face__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Face To Face</label>
    <type>Checkbox</type>
</CustomField>