force-app/main/default/objects/Contact/fields/Start_Test_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Test_Time__c</fullName>
    <label>Start Test Time</label>
    <type>Time</type>
</CustomField>