force-app/main/default/objects/Contact/fields/Tech_Round_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Tech_Round_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User record who interviewed the candidate</description>
    <label>Tech Round Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>