force-app/main/default/objects/Contact/fields/Technical_Round_Marks__c.field-meta.xml
<CustomField>
    <fullName>Technical_Round_Marks__c</fullName>
    <label>Technical Round Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>