force-app/main/default/objects/Contact/fields/Technical_Round_Rating__c.field-meta.xml
<CustomField>
    <fullName>Technical_Round_Rating__c</fullName>
    <formula>(
    CASE(Communication_Skills_Tr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Problem_Solving_Skills_Tr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Technical_Skills_Tr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Learning_Skills_Tr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Confidence_Level_Tr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0) +
    CASE(Attitude_and_Professionalism_Tr__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 0)
) / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Round Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>