force-app/main/default/objects/Contact/fields/TR_Question_Comments__c.field-meta.xml
<CustomField>
    <fullName>TR_Question_Comments__c</fullName>
    <label>TR Question Comments</label>
    <type>TextArea</type>
</CustomField>