force-app/main/default/objects/Contact/fields/Written_Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>Written_Test_Comments__c</fullName>
    <label>Written Test Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>