force-app/main/default/objects/Contact/fields/Written_Test_Marks__c.field-meta.xml
<CustomField>
    <fullName>Written_Test_Marks__c</fullName>
    <formula>Written_Test_Aptitude_Marks__c +  Written_Test_Technical_Marks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Written Test Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>