force-app/main/default/objects/Contact/fields/Written_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Written_Test_Status__c</fullName>
    <label>Written Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Status</valueSetName>
    </valueSet>
</CustomField>