force-app/main/default/objects/Contact/fields/Written_Test_Technical_Marks__c.field-meta.xml
<CustomField>
    <fullName>Written_Test_Technical_Marks__c</fullName>
    <label>Written Test Technical Marks</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>