force-app/main/default/objects/Contact/listViews/Today_s_Contacts.listView-meta.xml
<ListView>
    <fullName>Today_s_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Gender__c</columns>
    <columns>Written_Test_Status__c</columns>
    <columns>Coding_Round_Reviewer__c</columns>
    <columns>Coding_Round_Status__c</columns>
    <columns>Tech_Round_Interviewer__c</columns>
    <columns>Technical_Round_Status__c</columns>
    <columns>Manager_Round_Status__c</columns>
    <columns>HR_Round_Status__c</columns>
    <columns>Username__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exam_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Contacts</label>
</ListView>